--- a/Toutiao/Base.lproj/Main.storyboard
+++ b/Toutiao/Base.lproj/Main.storyboard
@@ -27,10 +27,6 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3MB-8V-RCl">
-                                            <rect key="frame" x="271" y="8" width="41" height="41"/>
-                                            <state key="normal" title="Button"/>
-                                        </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="选自 GET社区翻译计划" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xiF-ua-jx9">
                                             <rect key="frame" x="159" y="69" width="153" height="19"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -55,13 +51,18 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jlF-4e-0BT">
                                             <rect key="frame" x="68" y="69" width="23" height="21"/>
                                         </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UoL-hi-udF">
+                                            <rect key="frame" x="270" y="19" width="42" height="42"/>
+                                        </imageView>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="avatar" destination="UoL-hi-udF" id="1gd-vY-ulV"/>
                                     <outlet property="commentCount" destination="cDO-qU-GND" id="Bwk-af-SkK"/>
                                     <outlet property="likeCount" destination="PwK-JD-sKJ" id="L1m-mP-4ea"/>
                                     <outlet property="subject" destination="xiF-ua-jx9" id="cqn-63-Kow"/>
                                     <outlet property="title" destination="8Mn-cF-dDf" id="JwC-5Z-IKc"/>
+                                    <segue destination="bkW-3H-Md0" kind="show" id="OxH-R8-cxQ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -78,6 +79,31 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g7i-jm-d2Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="630" y="-293"/>
+        </scene>
+        <!--Article Detail View Controller-->
+        <scene sceneID="FXN-Qj-xsM">
+            <objects>
+                <viewController id="bkW-3H-Md0" customClass="ArticleDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gUH-zw-W1F"/>
+                        <viewControllerLayoutGuide type="bottom" id="TDj-uo-f0y"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cNk-NT-FgQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4lO-XN-gPc">
+                                <rect key="frame" x="0.0" y="120" width="320" height="399"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ew1-SB-3yl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1039" y="-293"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
