--- a/Toutiao/ArticleDetail.storyboard
+++ b/Toutiao/ArticleDetail.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="uh1-Cd-cv0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--Article Detail View Controller-->
+        <!--Item-->
         <scene sceneID="Rsh-SH-J5v">
             <objects>
                 <tableViewController id="uh1-Cd-cv0" customClass="ArticleDetailViewController" sceneMemberID="viewController">
@@ -52,11 +52,12 @@
                             <outlet property="delegate" destination="uh1-Cd-cv0" id="9L5-Ya-yKA"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="o2w-Wf-fv4"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="abX-EB-ZC2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="409" y="365"/>
+            <point key="canvasLocation" x="-547" y="222"/>
         </scene>
     </scenes>
 </document>
