--- a/Toutiao/PopupView.xib
+++ b/Toutiao/PopupView.xib
@@ -5,7 +5,15 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AuthorPopupController">
+            <connections>
+                <outlet property="authorName" destination="Y8n-tq-rpv" id="yPD-ui-EIc"/>
+                <outlet property="avatar" destination="LTX-Dr-lrC" id="Fjc-3A-5sm"/>
+                <outlet property="closeBtn" destination="Ier-Ow-oYY" id="Zia-4W-PRt"/>
+                <outlet property="fath" destination="Y8n-tq-rpv" id="j8s-lg-xjc"/>
+                <outlet property="popupView" destination="iN0-l3-epB" id="5bL-RD-RQf"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
@@ -41,7 +49,7 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="388" y="350"/>
+            <point key="canvasLocation" x="374" y="380"/>
         </view>
     </objects>
 </document>
