--- a/Toutiao/PopupView.xib
+++ b/Toutiao/PopupView.xib
@@ -7,10 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AuthorPopupController">
             <connections>
-                <outlet property="authorName" destination="Y8n-tq-rpv" id="yPD-ui-EIc"/>
+                <outlet property="authorName" destination="IM6-vx-aIs" id="1jz-c4-Kb7"/>
                 <outlet property="avatar" destination="LTX-Dr-lrC" id="Fjc-3A-5sm"/>
                 <outlet property="closeBtn" destination="Ier-Ow-oYY" id="Zia-4W-PRt"/>
                 <outlet property="fath" destination="Y8n-tq-rpv" id="j8s-lg-xjc"/>
+                <outlet property="focuse" destination="Itz-ZM-q97" id="QIL-1K-Q9x"/>
                 <outlet property="popupView" destination="iN0-l3-epB" id="5bL-RD-RQf"/>
             </connections>
         </placeholder>
@@ -19,30 +20,30 @@
             <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IM6-vx-aIs">
-                    <rect key="frame" x="114" y="124" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LTX-Dr-lrC">
-                    <rect key="frame" x="96" y="25" width="78" height="71"/>
+                    <rect key="frame" x="96" y="25" width="78" height="78"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ier-Ow-oYY">
-                    <rect key="frame" x="216" y="25" width="46" height="30"/>
-                    <state key="normal" title="关闭"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Itz-ZM-q97">
-                    <rect key="frame" x="101" y="212" width="68" height="30"/>
-                    <color key="backgroundColor" red="0.24928741500000001" green="0.79951362380000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="关注">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <rect key="frame" x="216" y="13" width="46" height="30"/>
+                    <state key="normal" title="关闭">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Itz-ZM-q97">
+                    <rect key="frame" x="95" y="213" width="81" height="30"/>
+                    <color key="backgroundColor" red="0.24928741500000001" green="0.79951362380000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal" title="关注"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Java JS Docker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y8n-tq-rpv">
                     <rect key="frame" x="83" y="170" width="105" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IM6-vx-aIs">
+                    <rect key="frame" x="99" y="124" width="73" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" red="0.24928741500000001" green="0.79951362380000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
