--- a/Toutiao/PopupView.xib
+++ b/Toutiao/PopupView.xib
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AuthorPopupController">
             <connections>
-                <outlet property="authorName" destination="IM6-vx-aIs" id="1jz-c4-Kb7"/>
-                <outlet property="avatar" destination="LTX-Dr-lrC" id="Fjc-3A-5sm"/>
-                <outlet property="closeBtn" destination="Ier-Ow-oYY" id="Zia-4W-PRt"/>
-                <outlet property="fath" destination="Y8n-tq-rpv" id="j8s-lg-xjc"/>
-                <outlet property="focuse" destination="Itz-ZM-q97" id="QIL-1K-Q9x"/>
-                <outlet property="popupView" destination="iN0-l3-epB" id="5bL-RD-RQf"/>
+                <outlet property="authorName" destination="IM6-vx-aIs" id="9gB-CR-5ec"/>
+                <outlet property="avatar" destination="LTX-Dr-lrC" id="XdE-ol-aAh"/>
+                <outlet property="closeBtn" destination="Ier-Ow-oYY" id="MVb-eH-6M0"/>
+                <outlet property="fath" destination="Y8n-tq-rpv" id="XqN-tb-DOV"/>
+                <outlet property="focus" destination="Itz-ZM-q97" id="DFG-oI-DDk"/>
+                <outlet property="popupView" destination="iN0-l3-epB" id="JJZ-gO-S8d"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,36 +21,40 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LTX-Dr-lrC">
-                    <rect key="frame" x="96" y="25" width="78" height="78"/>
+                    <rect key="frame" x="96" y="32" width="78" height="78"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ier-Ow-oYY">
-                    <rect key="frame" x="216" y="13" width="46" height="30"/>
-                    <state key="normal" title="关闭">
-                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Itz-ZM-q97">
-                    <rect key="frame" x="95" y="213" width="81" height="30"/>
+                    <rect key="frame" x="95" y="220" width="81" height="30"/>
                     <color key="backgroundColor" red="0.24928741500000001" green="0.79951362380000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="关注"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Java JS Docker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y8n-tq-rpv">
-                    <rect key="frame" x="83" y="170" width="105" height="21"/>
+                    <rect key="frame" x="8" y="177" width="254" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IM6-vx-aIs">
-                    <rect key="frame" x="99" y="124" width="73" height="21"/>
+                    <rect key="frame" x="45" y="131" width="180" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" red="0.24928741500000001" green="0.79951362380000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ier-Ow-oYY">
+                    <rect key="frame" x="210" y="23" width="46" height="25"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <state key="normal" title="关闭">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="closePopup:" destination="-1" eventType="touchUpInside" id="axc-d5-mPk"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="151" y="346"/>
+            <point key="canvasLocation" x="-86" y="546"/>
         </view>
     </objects>
 </document>
